tests/sksl/errors/ReservedNameHvec2.glsl
### Compilation failed:

error: 1: name 'hvec2' is reserved
int hvec2;
    ^^^^^
1 error
